Move to html-imports

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8" />
   <title>GaiaDrawer Demo</title>
   <meta name="description" content="Demo app for gaia-drawer" />
+  <link rel="import" type="text/html" href="gaia-drawer.html">
+
+  <!-- Demo Dependencies -->
+  <script src="bower_components/gaia-header/dist/script.js"></script>
+
   <style type="text/css">
     * {
       box-sizing: border-box;
@@ -43,16 +48,6 @@
       flex: 1;
     }
   </style>
-
-  <!-- Demo Dependencies -->
-  <link rel="stylesheet" type="text/css" href="../../../style/lists.css">
-  <script>window.GaiaHeaderBaseurl = '../../gaia_header/';</script>
-  <script src="../../gaia_header/script.js"></script>
-
-  <!-- Component -->
-  <script src="../../../js/component_utils.js"></script>
-  <script>window.GaiaDrawerBaseurl = '../';</script>
-  <script src="../script.js"></script>
 </head>
 <body role="application">
   <div class="slot third">
