Convert back to script version

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8" />
   <title>GaiaDrawer Demo</title>
   <meta name="description" content="Demo app for gaia-drawer" />
-  <link rel="import" type="text/html" href="gaia-drawer.html">
+
+  <script>window.GAIA_DRAWER_BASE_URL='./';</script>
 
   <!-- Demo Dependencies -->
   <script src="bower_components/gaia-header/dist/script.js"></script>
+  <script src="script.js"></script>
 
   <style type="text/css">
     * {
