--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     }
 
     gaia-drawer {
-      flex: 1;
+      position: absolute;
+      top: 50px;
+      right: 0;
+      bottom: 0;
+      left: 0;
     }
   </style>
 </head>
